# nautobot_mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  server.py  server_http.py
.github/: AUTHORS.md  CONTRIBUTORS.md
.github/workflows/: ci.yml
config/: repositories.json  user_repositories.json
docs/: diagram.drawio
docs/manage_repos/: steps.md
examples/: config_demo.py  demo_hybrid_processing.py  example_detailed_search_analysis.py  example_job.py  example_kb_search.py  example_ssl_usage.py  fetch_schema.py
examples/pynautobot_kb_example/: README.md  demo_pynautobot_sample.py
helpers/: content_processor.py  creds_helper.py  endpoint_searcher_chroma.py  manage_repos.py  nb_kb_v1.py  nb_kb_v2.py
tests/: test_endpoint_searcher_chroma.py  test_http_server.py  test_manage_repos.py  test_nb_kb_v2.py  test_ssl_fix.py
utils/: __init__.py  cache_embedding.py  config.py  embedding.py  git_manager.py  path.py  repo_config.py  validate_config.py
